baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__binary_ops.snap
---
source: target/debug/build/baml_tests-91bdee82f91f7b04/out/generated_tests.rs
expression: output
---
Word "function"
Word "Calculate"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "let"
Word "a"
Equals "="
Integer "1"
Plus "+"
Integer "2"
Word "let"
Word "b"
Equals "="
Word "a"
Star "*"
Integer "3"
Word "let"
Word "c"
Equals "="
Word "b"
Slash "/"
Integer "2"
Minus "-"
Integer "1"
Word "let"
Word "d"
Equals "="
LParen "("
Word "a"
Plus "+"
Word "b"
RParen ")"
Star "*"
Word "c"
Word "return"
Word "d"
RBrace "}"
