baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__field_access.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "FieldAccess"
LParen "("
Word "user"
Word "User"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Simple"
Word "field"
Word "access"
Let "let"
Word "name"
Equals "="
Word "user"
Dot "."
Word "name"
Semicolon ";"
Slash "/"
Slash "/"
Word "Nested"
Word "field"
Word "access"
Let "let"
Word "bio"
Equals "="
Word "user"
Dot "."
Word "profile"
Dot "."
Word "bio"
Semicolon ";"
Slash "/"
Slash "/"
Word "Deep"
Word "nesting"
Let "let"
Word "theme"
Equals "="
Word "user"
Dot "."
Word "profile"
Dot "."
Word "settings"
Dot "."
Word "theme"
Semicolon ";"
Slash "/"
Slash "/"
Word "Field"
Word "access"
Word "then"
Word "array"
Word "index"
Let "let"
Word "firstTag"
Equals "="
Word "user"
Dot "."
Word "tags"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Semicolon ";"
Return "return"
Word "theme"
Semicolon ";"
RBrace "}"
Class "class"
Word "User"
LBrace "{"
Word "name"
Word "string"
Word "profile"
Word "Profile"
Word "tags"
Word "string"
LBracket "["
RBracket "]"
RBrace "}"
Class "class"
Word "Profile"
LBrace "{"
Word "bio"
Word "string"
Word "settings"
Word "Settings"
RBrace "}"
Class "class"
Word "Settings"
LBrace "{"
Word "theme"
Word "string"
RBrace "}"
