baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__if_expressions.snap
---
source: target/debug/build/baml_tests-91bdee82f91f7b04/out/generated_tests.rs
expression: output
---
Word "function"
Word "ConditionalLogic"
LParen "("
Word "age"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "if"
Word "age"
Less "<"
Integer "18"
LBrace "{"
Word "return"
Quote "\""
Word "minor"
Quote "\""
RBrace "}"
Word "else"
Word "if"
Word "age"
Less "<"
Integer "65"
LBrace "{"
Word "return"
Quote "\""
Word "adult"
Quote "\""
RBrace "}"
Word "else"
LBrace "{"
Word "return"
Quote "\""
Word "senior"
Quote "\""
RBrace "}"
RBrace "}"
