baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__index_access.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "index"
Word "access"
Word "expressions"
Class "class"
Word "IndexUser"
LBrace "{"
Word "name"
Word "string"
Word "age"
Word "int"
Word "tags"
Word "string"
LBracket "["
RBracket "]"
RBrace "}"
Function "function"
Word "IndexAccess"
LParen "("
Word "users"
Colon ":"
Word "IndexUser"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Array"
Word "indexing"
With "with"
Word "literal"
Let "let"
Word "first"
Equals "="
Word "users"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Semicolon ";"
Slash "/"
Slash "/"
Word "Array"
Word "indexing"
With "with"
Word "variable"
Let "let"
Word "idx"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "second"
Equals "="
Word "users"
LBracket "["
Word "idx"
RBracket "]"
Semicolon ";"
Slash "/"
Slash "/"
Word "Nested"
Colon ":"
Word "array"
Word "element"
Word "field"
Word "access"
Let "let"
Word "firstName"
Equals "="
Word "users"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Dot "."
Word "name"
Semicolon ";"
Slash "/"
Slash "/"
Word "Deeply"
Word "nested"
Colon ":"
Word "array"
Word "then"
Word "field"
Word "then"
Word "index"
Let "let"
Word "tag"
Equals "="
Word "users"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Dot "."
Word "tags"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Semicolon ";"
Return "return"
Word "firstName"
Semicolon ";"
RBrace "}"
