baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__match_expressions.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
Slash "/"
Slash "/"
Enum "enum"
Word "Status"
LBrace "{"
Slash "/"
Slash "/"
Word "PENDING"
Slash "/"
Slash "/"
Word "ACTIVE"
Slash "/"
Slash "/"
Word "INACTIVE"
Slash "/"
Slash "/"
Word "SUSPENDED"
Slash "/"
Slash "/"
RBrace "}"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Function "function"
Word "HandleStatus"
LParen "("
Word "status"
Word "Status"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "match"
Word "status"
LBrace "{"
Slash "/"
Slash "/"
Word "Status"
DoubleColon "::"
Word "PENDING"
Equals "="
Greater ">"
Quote "\""
Word "Waiting"
For "for"
Word "approval"
Quote "\""
Slash "/"
Slash "/"
Word "Status"
DoubleColon "::"
Word "ACTIVE"
Equals "="
Greater ">"
Quote "\""
Word "Currently"
Word "active"
Quote "\""
Slash "/"
Slash "/"
Word "Status"
DoubleColon "::"
Word "INACTIVE"
Equals "="
Greater ">"
Quote "\""
Word "Not"
Word "active"
Quote "\""
Slash "/"
Slash "/"
Word "Status"
DoubleColon "::"
Word "SUSPENDED"
Equals "="
Greater ">"
Quote "\""
Word "Temporarily"
Word "suspended"
Quote "\""
Slash "/"
Slash "/"
RBrace "}"
Slash "/"
Slash "/"
RBrace "}"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Function "function"
Word "ComplexMatch"
LParen "("
Word "value"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "match"
Word "value"
LBrace "{"
Slash "/"
Slash "/"
IntegerLiteral "0"
Equals "="
Greater ">"
Quote "\""
Word "zero"
Quote "\""
Slash "/"
Slash "/"
IntegerLiteral "1"
Pipe "|"
IntegerLiteral "2"
Pipe "|"
IntegerLiteral "3"
Equals "="
Greater ">"
Quote "\""
Word "small"
Quote "\""
Slash "/"
Slash "/"
IntegerLiteral "4"
Dot "."
Dot "."
IntegerLiteral "10"
Equals "="
Greater ">"
Quote "\""
Word "medium"
Quote "\""
Slash "/"
Slash "/"
Word "_"
Equals "="
Greater ">"
Quote "\""
Word "large"
Quote "\""
Slash "/"
Slash "/"
RBrace "}"
Slash "/"
Slash "/"
RBrace "}"
Slash "/"
Slash "/"
