baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__precedence.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
Word "function"
Word "TestPrecedence"
LParen "("
RParen ")"
Arrow "->"
Word "bool"
LBrace "{"
Slash "/"
Slash "/"
Word "Multiplication"
Word "before"
Word "addition"
Word "let"
Word "a"
Equals "="
Integer "2"
Plus "+"
Integer "3"
Star "*"
Integer "4"
Slash "/"
Slash "/"
Word "Should"
Word "be"
Integer "14"
Comma ","
Word "not"
Integer "20"
Slash "/"
Slash "/"
Word "Comparison"
Word "after"
Word "arithmetic"
Word "let"
Word "b"
Equals "="
Word "a"
Greater ">"
Integer "10"
Plus "+"
Integer "2"
Slash "/"
Slash "/"
Word "Should"
Word "be"
Word "a"
Greater ">"
Integer "12"
Slash "/"
Slash "/"
Word "Logical"
Word "operators"
Word "let"
Word "c"
Equals "="
Word "true"
OrOr "||"
Word "false"
AndAnd "&&"
Word "false"
Slash "/"
Slash "/"
Word "Should"
Word "be"
Word "true"
LParen "("
Word "AND"
Word "before"
Word "OR"
RParen ")"
Word "return"
Word "c"
RBrace "}"
